force-app/main/default/objects/Quality_Check__c/Quality_Check__c.object-meta.xml
<CustomObject>
    <label>Quality Check</label>
    <nameField>
        <displayFormat>QC-{YYYY}-{00000}</displayFormat>
        <label>Quality-Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>