force-app/main/default/objects/Quality_Check__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quality Checks</relationshipLabel>
    <relationshipName>Quality_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>