force-app/main/default/objects/Quality_Check__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <formula>Account__r.AccountNumber</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>