force-app/main/default/objects/Quality_Check__c/fields/Assigned_Employee__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Checks1</relationshipName>
    <type>Lookup</type>
</CustomField>