force-app/main/default/objects/Quality_Check__c/fields/Assigned_To_Me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Me__c</fullName>
    <formula>Assigned_Employee__r.Id =  $User.Id</formula>
    <label>Assigned To Me</label>
    <type>Checkbox</type>
</CustomField>