force-app/main/default/objects/Quality_Check__c/fields/Check_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Check_Completed_At__c</fullName>
    <label>Check Completed At</label>
    <type>DateTime</type>
</CustomField>