force-app/main/default/objects/Quality_Check__c/fields/Check_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Check_Started_At__c</fullName>
    <label>Check Started At</label>
    <type>DateTime</type>
</CustomField>