force-app/main/default/objects/Quality_Check__c/fields/ContactPersonOnSite__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonOnSite__c</fullName>
    <label>Contact Person on Site</label>
    <length>60</length>
    <type>Text</type>
</CustomField>