force-app/main/default/objects/Quality_Check__c/fields/DaysUntilDue__c.field-meta.xml
<CustomField>
    <fullName>DaysUntilDue__c</fullName>
    <formula>IF(
    ISBLANK(Due_Date__c),
    &quot;⚪ No Due Date&quot;,
    IF(
        Due_Date__c &lt; TODAY(),
        &quot;🔴 Overdue by &quot; &amp; TEXT(ABS(Due_Date__c - TODAY())) &amp; &quot; days&quot;,
        IF(
            Due_Date__c = TODAY(),
            &quot;🔴 Due today&quot;,
            IF(
                Due_Date__c - TODAY() &lt;= 14,
                &quot;🟠 &quot; &amp; TEXT(Due_Date__c - TODAY()) &amp; &quot; days remaining&quot;,
                &quot;🟢 &quot; &amp; TEXT(Due_Date__c - TODAY()) &amp; &quot; days remaining&quot;
            )
        )
    )
)</formula>
    <label>Days Until Due</label>
    <type>Text</type>
</CustomField>