force-app/main/default/objects/Quality_Check__c/fields/ParentAccountAddress__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountAddress__c</fullName>
    <formula>Quality_Check_Report__r.Account__r.ShippingStreet &amp;
BR() &amp;
Quality_Check_Report__r.Account__r.ShippingPostalCode &amp; &quot; &quot; &amp;
Quality_Check_Report__r.Account__r.ShippingCity</formula>
    <label>Parent Account Address</label>
    <type>Text</type>
</CustomField>