force-app/main/default/objects/Quality_Check__c/fields/ParentAccountNumberName__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountNumberName__c</fullName>
    <formula>Quality_Check_Report__r.Account__r.AccountNumber &amp;&quot; | &quot; &amp; Quality_Check_Report__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Number &amp; Name</label>
    <type>Text</type>
</CustomField>