force-app/main/default/objects/Quality_Check__c/fields/Planned_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Check_Date__c</fullName>
    <label>Planned Check Date</label>
    <type>DateTime</type>
</CustomField>