force-app/main/default/objects/Quality_Check__c/fields/Planned_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Planned_Event_Id__c</fullName>
    <label>Planned Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>