force-app/main/default/objects/Quality_Check__c/fields/PlanningStatus__c.field-meta.xml
<CustomField>
    <fullName>PlanningStatus__c</fullName>
    <formula>IF(
    ISBLANK(Planned_Check_Date__c),
    &quot;⚪ Not Scheduled&quot;,

    IF(
        TODAY() &lt; Start_Date__c,
        &quot;🔵 Upcoming – Execution starts in &quot; &amp;
        TEXT(Start_Date__c - TODAY()) &amp;
        &quot; days&quot;,

        IF(
            TODAY() &gt; Due_Date__c,
            &quot;🔴 Overdue by &quot; &amp;
            TEXT(ABS(Due_Date__c - TODAY())) &amp;
            &quot; days&quot;,

            IF(
                TODAY() = Due_Date__c,
                &quot;🕒 Due Today&quot;,

                IF(
                    Due_Date__c - TODAY() &lt;= 14,
                    &quot;🟠 Due Soon – &quot; &amp;
                    TEXT(Due_Date__c - TODAY()) &amp;
                    &quot; days remaining&quot;,

                    &quot;🟢 Execution Window Open – &quot; &amp;
                    TEXT(Due_Date__c - TODAY()) &amp;
                    &quot; days remaining&quot;
                )
            )
        )
    )
)</formula>
    <label>Planning Status</label>
    <type>Text</type>
</CustomField>