force-app/main/default/objects/Quality_Check__c/fields/Quality_Check_Planned__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_Planned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Check Planned</label>
    <type>Checkbox</type>
</CustomField>