force-app/main/default/objects/Quality_Check__c/fields/Quality_Check_Report__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_Report__c</fullName>
    <label>Quality Check Report</label>
    <referenceTo>Quality_Check_Report__c</referenceTo>
    <relationshipLabel>Quality Checks</relationshipLabel>
    <relationshipName>Quality_Checks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>