force-app/main/default/objects/Quality_Check__c/fields/QualityCheckDelegate__c.field-meta.xml
<CustomField>
    <fullName>QualityCheckDelegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Check Delegate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Checks_Delegate</relationshipName>
    <type>Lookup</type>
</CustomField>