force-app/main/default/objects/Quality_Check__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Follow-up Required</fullName>
            </value>
            <value>
                <fullName>Follow-up Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <isActive>false</isActive>
                <label>Incomplete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>