force-app/main/default/objects/Quality_Check__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>Account__r.ShippingStreet</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>