force-app/main/default/objects/Quality_Check__c/fields/Tested_by__c.field-meta.xml
<CustomField>
    <fullName>Tested_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tested by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>