force-app/main/default/objects/Quality_Check__c/fields/Weeknumber_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Weeknumber_Planned_Date__c</fullName>
    <formula>&quot;KW &quot; &amp; TEXT(
  IF(
    CEILING((DATEVALUE(Planned_Check_Date__c) - DATE(YEAR(DATEVALUE(Planned_Check_Date__c) - WEEKDAY(DATEVALUE(Planned_Check_Date__c) - 1) + 4), 1, 3) +
    WEEKDAY(DATE(YEAR(DATEVALUE(Planned_Check_Date__c) - WEEKDAY(DATEVALUE(Planned_Check_Date__c) - 1) + 4), 1, 3)) - 5) / 7) = 0,
    CEILING((DATEVALUE(Planned_Check_Date__c) - DATE(YEAR(DATEVALUE(Planned_Check_Date__c) - WEEKDAY(DATEVALUE(Planned_Check_Date__c) - 1) + 4) - 1, 1, 3) +
    WEEKDAY(DATE(YEAR(DATEVALUE(Planned_Check_Date__c) - WEEKDAY(DATEVALUE(Planned_Check_Date__c) - 1) + 4) - 1, 1, 3)) - 5) / 7),
    CEILING((DATEVALUE(Planned_Check_Date__c) - DATE(YEAR(DATEVALUE(Planned_Check_Date__c) - WEEKDAY(DATEVALUE(Planned_Check_Date__c) - 1) + 4), 1, 3) +
    WEEKDAY(DATE(YEAR(DATEVALUE(Planned_Check_Date__c) - WEEKDAY(DATEVALUE(Planned_Check_Date__c) - 1) + 4), 1, 3)) - 5) / 7)
  )
)</formula>
    <label>Weeknumber (Planned Date)</label>
    <type>Text</type>
</CustomField>