force-app/main/default/objects/Quality_Check__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <formula>Account__r.ShippingPostalCode</formula>
    <label>Zip-Code</label>
    <type>Text</type>
</CustomField>