force-app/main/default/objects/Quality_Check__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assigned_Employee__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Check_Completed_At__c</columns>
    <columns>Check_Started_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>