force-app/main/default/objects/Quality_Check__c/listViews/All_My_Quality_Checks.listView-meta.xml
<ListView>
    <fullName>All_My_Quality_Checks</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assigned_Employee__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Check_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Check_Started_At__c</columns>
    <columns>Check_Completed_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To_Me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All My Quality Checks</label>
</ListView>