force-app/main/default/objects/Quality_Check__c/listViews/My_Unplanned_Quality_Checks.listView-meta.xml
<ListView>
    <fullName>My_Unplanned_Quality_Checks</fullName>
    <columns>PlanningStatus__c</columns>
    <columns>NAME</columns>
    <columns>AccountNumber__c</columns>
    <columns>Account__c</columns>
    <columns>Street__c</columns>
    <columns>ZipCode__c</columns>
    <columns>City__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>DaysUntilDue__c</columns>
    <columns>Due_Date__c</columns>
    <columns>ParentAccountNumberName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Assigned_To_Me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Unplanned Quality Checks</label>
</ListView>